objects/X7S_Image_Gallery__c/X7S_Image_Gallery__c.object-meta.xml
<CustomObject>
    <label>7S Image Gallery</label>
    <nameField>
        <label>Image Gallery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Image Galleries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>