objects/X7S_Image_Gallery__c/fields/Default_Image__c.field-meta.xml
<CustomField>
    <fullName>Default_Image__c</fullName>
    <label>Default Image</label>
    <type>Url</type>
</CustomField>