objects/X7S_Image_Gallery__c/fields/Image_Gallery_ID__c.field-meta.xml
<CustomField>
    <fullName>Image_Gallery_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Gallery ID</label>
    <type>Text</type>
</CustomField>