objects/X7S_Image_Gallery__c/fields/x7s_Image_Gallery__c.field-meta.xml
<CustomField>
    <fullName>x7s_Image_Gallery__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Gallery ID</label>
    <type>Text</type>
</CustomField>